[package]
name = "dsky"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["serde_derive"] }
urlencoding = "1.3.3"
eyre = "0.6.5"
serde_json = "1.0"
rust_decimal = "1.14"
reqwest = { version = "0.11", features = ["json"] }
